feat: add crafting matrix item filter
Pressing CTRL + SHIFT on the crafting result slot filters the view
based on the items in the crafting matrix.

The reason for this is that you can quickly see how much you have left in the storage network.